# ctff-python-example

./: Dockerfile  README.md  main.py  pyproject.toml
src/app/: main.py
src/ctff/: __init__.py  ctff.py
